<resources>
    <string name="app_name">Wise Wallet</string>
    <string name="balance">Balance</string>
    <string name="my_wallet">My Wallet</string>
    <string name="select_date">Select Date</string>
    <string name="add_wallet_items">Add Wallet Items</string>
    <string name="enter_the_description">Enter the Discription</string>
    <string name="enter_the_amount">Enter the Amount</string>
    <string name="enter_the_category">Enter the Category</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
</resources>