<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletViewActivity">

    <LinearLayout
        android:id="@+id/viewHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/walletHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/my_wallet"
            android:textColor="@color/green"
            android:textSize="24sp"
            android:layout_marginBottom="20sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnExpense"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/expense" />

            <Button
                android:id="@+id/btnIncome"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="12dp"
                android:text="@string/income" />

        </RelativeLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/walletRecycleView"
        android:layout_width="match_parent"
        android:layout_height="693dp"
        android:layout_below="@+id/viewHeading"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="4dp"
        android:padding="16dp" />

</RelativeLayout>